--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distlib==0.3.4
 dj-database-url==0.5.0
 Django==4.0.6
 django-filter==22.1
+django-on-heroku==1.1.2
 django-storages==1.12.3
 filelock==3.7.1
 gunicorn==20.1.0
